--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Origin Trials to enable Gallery View in Chrome/Edge -->
     <!-- More Info: https://marketplace.zoom.us/docs/sdk/overview/improve-performance -->
     <!-- SharedArrayBuffers in non-isolated pages on Desktop platforms -->
-    <meta http-equiv="origin-trial" content="">
+    <meta http-equiv="origin-trial" content="AjIXuLAbW60fO6wU1kuOSTNMBUwUgZHspTRDcqzK3/B9uaIWc6UeX2WzLE59A+cH3p/K9ar0HnZiqU7MLq7DLQEAAAB7eyJvcmlnaW4iOiJodHRwczovL3Nla2VsbHkuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJVbnJlc3RyaWN0ZWRTaGFyZWRBcnJheUJ1ZmZlciIsImV4cGlyeSI6MTY4ODA4MzE5OSwiaXNTdWJkb21haW4iOnRydWV9">
   </head>
   <body>
 
