--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Zoom Meeting SDK Component JS</title>
+    <title>Meeting WEB SDK Component 295 JS</title>
 
     <!-- For Client View -->
     <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.9.5/css/bootstrap.css" />
