--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
 
     <main>
-      <h1>Zoom Meeting SDK Component JS</h1>
+      <h1>Meeting WEB SDK Component 295 JS</h1>
 
       <!-- For Component View -->
       <div id="meetingSDKElement">
