--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Meeting WEB SDK Component 295 JS</title>
+    <title>Meeting Web SDK Component 295 JS</title>
 
     <!-- For Client View -->
     <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.9.5/css/bootstrap.css" />
@@ -23,7 +23,7 @@
   <body>
 
     <main>
-      <h1>Meeting WEB SDK Component 295 JS</h1>
+      <h1>Meeting Web SDK Component 295 JS</h1>
 
       <!-- For Component View -->
       <div id="meetingSDKElement">
