--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <style>
     body {
        background-color: rgb(105, 184, 233);
+       background-image: url('https://zoom.us/account/branding/p/b7f37763-6dee-4be3-8c55-cda5ba5c7310.gif');
+       background-repeat: no-repeat;
+       background-attachment: fixed;
+       background-position: center; 
     }
   </style>
   <body>
@@ -30,7 +34,7 @@
         <!-- Zoom Meeting SDK Rendered Here -->
       </div>
 
-      <button onClick="getSignature()">Join Meeting</button>
+      <button onClick="getSignature()">Join Coach</button>
     </main>
 
     <!-- For Component and Client View -->
