--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Meeting Web SDK Component 2Ten JS</title>
+    <title>Meeting Web SDK Component 2Ten1 JS</title>
 
     <!-- For Client View -->
-    <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.10.0/css/bootstrap.css" />
-    <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.10.0/css/react-select.css" />
+    <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.10.1/css/bootstrap.css" />
+    <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.10.1/css/react-select.css" />
 
     <link rel="stylesheet" href="styles.css">
 
@@ -24,7 +24,7 @@
   <body>
 
     <main>
-      <h1>Meeting Web SDK Component 2Ten JS</h1>
+      <h1>Meeting Web SDK Component 2Ten1 JS</h1>
 
       <!-- For Component View -->
       <div id="meetingSDKElement">
@@ -35,18 +35,18 @@
     </main>
 
     <!-- For Component and Client View -->
-    <script src="https://source.zoom.us/2.10.0/lib/vendor/react.min.js"></script>
-    <script src="https://source.zoom.us/2.10.0/lib/vendor/react-dom.min.js"></script>
-    <script src="https://source.zoom.us/2.10.0/lib/vendor/redux.min.js"></script>
-    <script src="https://source.zoom.us/2.10.0/lib/vendor/redux-thunk.min.js"></script>
-    <script src="https://source.zoom.us/2.10.0/lib/vendor/lodash.min.js"></script>
+    <script src="https://source.zoom.us/2.10.1/lib/vendor/react.min.js"></script>
+    <script src="https://source.zoom.us/2.10.1/lib/vendor/react-dom.min.js"></script>
+    <script src="https://source.zoom.us/2.10.1/lib/vendor/redux.min.js"></script>
+    <script src="https://source.zoom.us/2.10.1/lib/vendor/redux-thunk.min.js"></script>
+    <script src="https://source.zoom.us/2.10.1/lib/vendor/lodash.min.js"></script>
 
     <!-- For Client View -->
     <!-- script src="https://source.zoom.us/zoom-meeting-2.10.0.min.js"></script -->
     <!-- script type="text/javascript" src="client-view.js"></script -->
 
     <!-- For Component View -->
-    <script src="https://source.zoom.us/2.10.0/zoom-meeting-embedded-2.10.0.min.js"></script> 
+    <script src="https://source.zoom.us/2.10.1/zoom-meeting-embedded-2.10.1.min.js"></script> 
     <script type="text/javascript" src="component-view.js"></script>
 
   </body>
