--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <style>
     body {
        background-color: rgb(105, 184, 233);
-       background-image: url('https://zoom.us/account/branding/p/b7f37763-6dee-4be3-8c55-cda5ba5c7310.gif');
+       background-image: url('https://zoom.us/account/branding/p/c956b189-497b-48f2-8bc0-e69f54b4c078.jpeg');
     }
   </style>
   <body>
