--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Meeting Web SDK Component 2Ten1 JS</title>
+    <title>Stop Collaborate & Listen</title>
 
     <!-- For Client View -->
     <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.10.1/css/bootstrap.css" />
@@ -24,14 +24,14 @@
   <body>
 
     <main>
-      <h1>Meeting Web SDK Component 2Ten1 JS</h1>
+      <h1>Stop Collaborate & Listen</h1>
 
       <!-- For Component View -->
       <div id="meetingSDKElement">
         <!-- Zoom Meeting SDK Rendered Here -->
       </div>
 
-      <button onClick="getSignature()">Join Coach</button>
+      <button onClick="getSignature()">Join Coach D1</button>
     </main>
 
     <!-- For Component and Client View -->
