--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Stop Collaborate & Listen</title>
+    <title>Life Coach</title>
 
     <!-- For Client View -->
     <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.10.1/css/bootstrap.css" />
@@ -18,20 +18,20 @@
     <style>
     body {
        background-color: rgb(105, 184, 233);
-       background-image: url('https://zoom.us/account/branding/p/c956b189-497b-48f2-8bc0-e69f54b4c078.jpeg');
+       background-image: url('https://zoom.us/account/branding/p/b7f37763-6dee-4be3-8c55-cda5ba5c7310.gif');
     }
   </style>
   <body>
 
     <main>
-      <h1>Stop Collaborate & Listen</h1>
+      <h1>Life Coach</h1>
 
       <!-- For Component View -->
       <div id="meetingSDKElement">
         <!-- Zoom Meeting SDK Rendered Here -->
       </div>
 
-      <button onClick="getSignature()">Join Coach D1</button>
+      <button onClick="getSignature()">Join Coach</button>
     </main>
 
     <!-- For Component and Client View -->
