--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Life Coach</title>
+    <script src="coi-serviceworker.js"></script>
 
     <!-- For Client View -->
     <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.16.2/css/bootstrap.css" />
