--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Origin Trials to enable Gallery View in Chrome/Edge -->
     <!-- More Info: https://marketplace.zoom.us/docs/sdk/overview/improve-performance -->
     <!-- SharedArrayBuffers in non-isolated pages on Desktop platforms -->
-    <meta http-equiv="origin-trial" content="AhstCEDFUa2lk7wJ7KvCMwjMoJZNQoA/Xolr9r8S3Uk7Uk1tVZ8OP8AuKrSYr0JN+cu5YN9ria6+SOlThMaaMQ4AAABoeyJvcmlnaW4iOiJodHRwczovL3Nla2VsbHkuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJVbnJlc3RyaWN0ZWRTaGFyZWRBcnJheUJ1ZmZlciIsImV4cGlyeSI6MTcwOTg1NTk5OX0=">
+    <meta http-equiv="origin-trial" content="">
   </head>
     <style>
     body {
